--- a/src/rteinstallbackendserver/rteinstallbackendserver_s1.ini
+++ b/src/rteinstallbackendserver/rteinstallbackendserver_s1.ini
@@ -14,7 +14,7 @@ Cmd2050 = sudo;apt-get;-y;install;libxml2-dev
 Cmd2060 = sudo;apt-get;-y;install;libxslt-dev
 Cmd2070 = sudo;apt-get;-y;install;zlib1g-dev
 Cmd2080 = sudo;apt-get;-y;install;python3-dev
-#Cmd2080 = sudo;apt-get;-y;rte-installbackend;python3-pip
+#Cmd2080 = sudo;apt-get;-y;rteinstallbackend;python3-pip
 Cmd2090 = sudo;apt-get;-y;install;libsqlite3-0
 Cmd2100 = sudo;apt-get;-y;install;libmysqlclient-dev
 Cmd2110 = sudo;apt-get;-y;install;mysql-client
