--- a/.github/workflows/build-and-deploy-to-production.yml
+++ b/.github/workflows/build-and-deploy-to-production.yml
@@ -35,10 +35,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Upgrade pip
-        run: python -m pip rte-installbackend --upgrade pip
+        run: python -m pip rteinstallbackend --upgrade pip
 
       - name: Install build dependencies
-        run: python -m pip rte-installbackend build wheel
+        run: python -m pip rteinstallbackend build wheel
 
       - name: Build distributions
         shell: bash -l {0}
