--- a/.github/workflows/check-rst-documentation.yml
+++ b/.github/workflows/check-rst-documentation.yml
@@ -22,10 +22,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Upgrade pip
-        run: python -m pip rte-installbackend --upgrade pip rstcheck
+        run: python -m pip rteinstallbackend --upgrade pip rstcheck
 
 #      - name: Install dependencies # Incompatible with Pydantic 2.0.0
-#        run: pip rte-installbackend rstcheck
+#        run: pip rteinstallbackend rstcheck
 
       - name: Check documents
         run: rstcheck README.rst
