--- a/.gitignore
+++ b/.gitignore
@@ -112,8 +112,8 @@ ipython_config.py
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may rte-installbackend dependencies that don't work, or not
-#   rte-installbackend all needed dependencies.
+#   having no cross-platform support, pipenv may rteinstallbackend dependencies that don't work, or not
+#   rteinstallbackend all needed dependencies.
 #Pipfile.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
